# cc5x-debug-probe

./: .gitignore  .pre-commit-config.yaml  00-master-plan.md  01-debug-link-protocol.md  02-target-footprint.md  03-helper-codegen-and-companion.md  04-software-stack.md  05-cdl-proto-codec.md  README.md  pyproject.toml
.github/workflows/: ci.yml
firmware/probe-f042/: .clang-format  .clang-tidy  .gitignore  BRINGUP.md  CMakeLists.txt  CMakePresets.json  HARDWARE.md  README.md
firmware/probe-f042/cmake/: arm-none-eabi-gcc.cmake
firmware/probe-f042/src/: board.h  board_f042.c  bytefifo.h  main.c  probe_pins.h  relay.c  relay.h  usb_cdc.c  usb_cdc.h  usb_ctrl.c  usb_ctrl.h  usb_desc.c  usb_desc.h
firmware/probe-f042/tests/: test_relay.c  test_usb_ctrl.c  test_usb_desc.c
firmware/probe-f042/tools/: relay_decode.py
